--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,36 @@ body {
   font-family: "Inter", sans-serif;
   color: white;
 }
+
+.btn-primary{
+  width: 224px;
+height: 54px;
+padding: 16px 40px ;
+border-radius: 42px;
+background: rgb(230, 83, 60);
+border: none;
+color: rgb(255, 255, 255);
+font-size: 1.12rem;
+font-weight: 600;
+}
+.common-text{
+  font-size: 3rem;
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 14px;
+}
+.common-p{
+  font-size: 0.87rem;
+  color: rgba(255, 255, 255,0.5);
+  font-weight: 400;
+  margin-bottom: 14px;
+  max-width: 670px;
+  text-align: center;
+}
+.align-left{
+  text-align: left;
+}
 /* -------hero section-------- */
 
 .hero {
@@ -31,7 +61,6 @@ body {
 .navbar {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
   margin: 0 190px;
   margin-top: 55px;
   align-items: center;
@@ -48,6 +77,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 40px;
   justify-content: left;
+  padding: 6px;
   /* gap: 40px; */
 }
 
@@ -63,7 +93,7 @@ body {
   font-size: 1.12rem;
 }
 .nav-link-home {
-  padding: 8px 20px;
+  padding: 6px 20px;
   border-radius: 46px;
   background: rgb(230, 83, 60);
 }
@@ -172,6 +202,138 @@ body {
 .nav-i {
   display: none;
 }
+section{
+  margin-bottom: 100px;
+}
+/* ---------habit section------ */
+
+.habit{
+  max-width: 1044px;
+  min-height: 450px;
+  margin: 0px auto;
+  margin-top: 100px;
+  border: 1px solid red;
+  
+}
+.habit-text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.habit-text h3{
+  font-size: 3rem;
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 14px;
+}
+
+.habit-text p{
+  font-size: 0.87rem;
+  color: rgba(255, 255, 255,0.5);
+  font-weight: 400;
+  margin-bottom: 14px;
+  max-width: 670px;
+  text-align: center;
+}
+
+.habit-hr{
+  width: 1440px;
+  position: absolute;
+  margin: 0 auto;
+  right: 230px;
+  border: 0.1px solid rgb(71, 6, 6);
+  
+}
+.habit-element{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+  margin-top: 55px;
+  justify-content: space-between;
+  align-items: space-between;
+}
+
+.habit-element h4{
+  font-size: 1.12rem;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.habit-element p{
+  font-size: 0.87rem;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+}
+.habit-element-item{
+  height: 273px;
+  /* width: 231px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  border: 1px solid red;
+}
+.habit-element-img{
+  height: 180px;
+  /* padding: 0px 30px 30px 30px; */
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
+.habit-element-img img{
+  width: 100%;
+  height: 100%;
+  
+}
+/* ---------run---------- */
+.run{
+  max-width: 1060px;
+  min-height: 371px;
+  border: 1px solid red;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.run-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding:41px 0px 41px 54px ;
+  border: 1px solid red;
+  height: 290px;
+  width: 443px;
+}
+.run-image{
+  width: 366px;
+  height: 312px;
+  margin-right: 32px;
+ 
+}
+.run-image img{
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+  object-position: center;
+  object-fit: cover;
+  
+}
+
+/* ---------bmi section----- */
+.bmi-text{
+  max-width: 671px;
+  height: 120px;
+  margin: 0 auto;
+  
+}
+
+.bmi-info{
+  max-width: 1440px;
+  min-height: 487px;
+  display: flex;
+  justify-content: space-around;
+}
 
 /* -----responsive small device-------- */
 
@@ -234,5 +396,16 @@ height: 74.09px;
 }
 .banner-card-2 h5{
     font-size: 30px;
+}
+/* ----habit section---- */
+.habit{
+  margin-left: 28px;
+  margin-right: 28px;
+}
+.habit-hr{
+  display: none;
+}
+.habit-element{
+  grid-template-columns: 1fr;
 }
 }
