--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body {
 .hero {
   max-width: 1440px;
   min-height: 715px;
-  
+
   margin: 0 auto;
   background: linear-gradient(
     180deg,
@@ -63,11 +63,12 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 0 190px;
-  margin-top: 55px;
+  margin-top: 25px;
   align-items: center;
 }
 
-.nav-title h2, .footer-h2 {
+.nav-title h2,
+.footer-h2 {
   font-size: 2.25rem;
   color: rgb(230, 83, 60);
   font-weight: 800;
@@ -213,7 +214,6 @@ section {
   min-height: 450px;
   margin: 0px auto;
   margin-top: 100px;
-  
 }
 .habit-text {
   display: flex;
@@ -272,7 +272,6 @@ section {
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  
 }
 .habit-element-img {
   height: 180px;
@@ -288,7 +287,7 @@ section {
 .run {
   max-width: 1060px;
   min-height: 371px;
-  
+
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -301,7 +300,7 @@ section {
   flex-direction: column;
   justify-content: space-between;
   padding: 41px 0px 41px 54px;
-  
+
   height: 290px;
   width: 443px;
 }
@@ -330,7 +329,7 @@ section {
   min-height: 487px;
   margin: 0 auto;
   margin-top: 70px;
-  
+
   display: flex;
   justify-content: space-around;
 
@@ -340,7 +339,7 @@ section {
 .bmi-info-calculator {
   max-width: 577px;
   height: 386px;
-  
+
   margin-top: 50px;
 }
 .bmi-info h2 {
@@ -350,7 +349,6 @@ section {
 }
 .bmi-info-chart {
   margin-top: 50px;
-  
 }
 table {
   width: 100%;
@@ -406,51 +404,75 @@ height: 48px; */
 
 /* ---------team section--------- */
 
-.team{
+.team {
   max-width: 1060px;
   min-height: 781px;
-  
+
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.team-info{
-  max-width:671px ;
+.team-info {
+  max-width: 671px;
   padding: 0 10px;
   margin: 0 auto;
 }
-.team-container{
+.team-container {
   width: 100%;
   min-height: 604px;
-  
+
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   padding: 20px;
   gap: 20px;
   border-radius: 18px;
-background: rgba(255, 255, 255, 0.1);
-  
+  background: rgba(255, 255, 255, 0.1);
 }
-.team-content{
+.team-content {
   /* width:326.67px ; */
   height: 272px;
   position: relative;
 }
-.team-content img{
+.team-content img {
   width: 100%;
   height: 100%;
   border-radius: 18px;
   object-fit: cover;
   filter: brightness(70%);
 }
-.team-content-info{
+.team-content-info {
   position: absolute;
   top: 220px;
   left: 20px;
 }
+
+/* ---------our packages-------- */
+.packages {
+  max-width: 1200px;
+  min-height: 600px;
+  border: 1px solid red;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 18px;
+  background: rgba(255, 255, 255, 0.1);
+}
+.packages-info{
+  max-width: 671px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+.packages-container{
+  border: 1px solid red;
+  max-width: 100%;
+  min-height: 400px;
+  margin: 0 auto;
+  display: flex;
+}
 /* -------footer---------- */
-.footer{
+.footer {
   max-width: 1440px;
   min-height: 420px;
   margin: 0 auto;
@@ -459,52 +481,50 @@ background: rgba(255, 255, 255, 0.1);
   flex-direction: column;
   justify-content: space-between;
 }
-.footer-p{
+.footer-p {
   font-size: 20px;
   margin-top: 36px;
 }
-.footer-bottom{
+.footer-bottom {
   width: 100%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  
+
   justify-content: center;
   align-items: center;
 }
-.footer-upper{
-  width:1060px ;
+.footer-upper {
+  width: 1060px;
   min-height: 246px;
   margin: 0 auto;
   margin-top: 70px;
   display: flex;
   justify-content: space-between;
   align-items: start;
-  
 }
-.footer ul{
+.footer ul {
   list-style-type: none;
 }
-.footer-h2{
+.footer-h2 {
   font-size: 4.37rem;
   margin-bottom: 20px;
 }
-.footer h4{
+.footer h4 {
   font-size: 2rem;
-font-weight: 700;
-margin-bottom: 40px;
+  font-weight: 700;
+  margin-bottom: 40px;
 }
-.footer-1{
+.footer-1 {
   width: 443px;
   height: 176px;
   padding-right: 20px;
-  
 }
-.footer-2{
+.footer-2 {
   width: 185px;
   height: 246px;
 }
-.footer-hr{
+.footer-hr {
   width: 1059.5px;
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -528,7 +548,6 @@ margin-bottom: 40px;
   .banner {
     flex-direction: column;
     margin: 20px;
-    
   }
   .banner-text h1 {
     font-size: 36px;
@@ -600,9 +619,8 @@ margin-bottom: 40px;
     flex-direction: column;
     justify-content: space-between;
     padding: 40px 40px;
-    
   }
-  section{
+  section {
     margin-bottom: 70px;
   }
   .btn-2 {
@@ -616,47 +634,45 @@ margin-bottom: 40px;
     padding: 40px 10px;
   }
   /* ------bmi---- */
-  .bmi-text{
+  .bmi-text {
     margin-left: 20px;
   }
-  .bmi-info{
+  .bmi-info {
     flex-direction: column;
-    
   }
-  .bmi-info-chart{
-   
+  .bmi-info-chart {
     width: 310px;
   }
-  .bmi-info-chart, .bmi-info-calculator {
+  .bmi-info-chart,
+  .bmi-info-calculator {
     margin-left: 20px;
   }
-  .bmi-info-calculator{
+  .bmi-info-calculator {
     width: 364px;
   }
-  .bmi-info h2{
+  .bmi-info h2 {
     font-size: 1rem;
   }
   input,
-select {
-  width: 100%;
-}
-/* --------team-------- */
-.team-container{
-  grid-template-columns: 1fr;
-}
-.team-content{
-  margin-top: 20px;
-}
-/* -------foooter */
-.footer{
-  padding: 20px;
-}
-.footer-upper{
-  flex-direction: column;
-  gap: 30px;
-}
-.footer-bottom{
-  flex-direction: column;
-}
-
+  select {
+    width: 100%;
+  }
+  /* --------team-------- */
+  .team-container {
+    grid-template-columns: 1fr;
+  }
+  .team-content {
+    margin-top: 20px;
+  }
+  /* -------foooter */
+  .footer {
+    padding: 20px;
+  }
+  .footer-upper {
+    flex-direction: column;
+    gap: 30px;
+  }
+  .footer-bottom {
+    flex-direction: column;
+  }
 }
