--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,9 @@ body {
   font-family: "Inter", sans-serif;
   color: white;
 }
-
+button {
+  cursor: pointer;
+}
 .btn-primary {
   width: 224px;
   height: 54px;
@@ -277,6 +279,7 @@ section {
   height: 180px;
   /* padding: 0px 30px 30px 30px; */
   border-radius: 50%;
+  border: 4px solid rgb(43, 41, 41);
   margin-bottom: 30px;
 }
 .habit-element-img img {
@@ -393,7 +396,7 @@ select {
 }
 select option {
   background-color: #444444;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(233, 220, 220, 0.6);
 }
 .select-activity {
   /* width: 577px;
@@ -451,25 +454,99 @@ height: 48px; */
 .packages {
   max-width: 1200px;
   min-height: 600px;
-  border: 1px solid red;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   border-radius: 18px;
-  background: rgba(255, 255, 255, 0.1);
 }
-.packages-info{
+.packages-info {
   max-width: 671px;
   padding: 0 10px;
   margin: 0 auto;
+  margin-bottom: 30px;
 }
-.packages-container{
+/* .packages-container {
+  max-width: 1190px;
+  min-height: 350px;
   border: 1px solid red;
-  max-width: 100%;
-  min-height: 400px;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+} */
+
+.packages-container {
+  max-width: 1200px;
+  min-height: 350px;
+  padding: 70px;
+  border-radius: 18px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  background: rgba(255, 255, 255, 0.1);
+}
+.card {
+  height: 310px;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  position: relative;
+  box-shadow: rgba(202, 202, 206, 0.1) 0px 4px 16px,
+    rgba(69, 69, 94, 0.1) 0px 8px 24px, rgba(138, 138, 170, 0.1) 0px 16px 56px;
+  transition: all 0.3s ease-in 0.1s;
+}
+.card-info {
+  height: 80px;
+  width: 250px;
+  display: none;
+}
+.card:hover {
+  transform: scale(1.15);
+  .card-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #444444;
+    bottom: 0;
+  }
+}
+.card-info h4 {
+  margin-top: 10px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 2rem;
+  color: blanchedalmond;
+}
+.card-info p {
+  margin-bottom: 10px;
+}
+.card-info span {
+  font-family: "Great Vibes", cursive;
+  font-size: 1.3rem;
+  color: aliceblue;
+}
+
+.card-img {
+  height: 310px;
+  width: 250px;
+  border: 1px solid rgb(22, 177, 55);
+  border-radius: 15px;
+  margin-bottom: 5px;
+  object-fit: contain;
+}
+.card-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
 }
 /* -------footer---------- */
 .footer {
@@ -663,6 +740,19 @@ height: 48px; */
   }
   .team-content {
     margin-top: 20px;
+  }
+  /* --------package-------- */
+  .packages-container {
+    grid-template-columns: 1fr;
+  }
+  .card-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #444444;
+    bottom: 0;
   }
   /* -------foooter */
   .footer {
